--- a/SignalRChat/Pages/Index.cshtml
+++ b/SignalRChat/Pages/Index.cshtml
@@ -6,6 +6,10 @@
         <div class="col-4"><input type="text" id="userInput" /></div>
     </div>
     <div class="row">
+        <div class="col-2">Method</div>
+        <div class="col-4"><input type="text" id="methodInput" value="SendMessage"/></div>
+    </div>
+    <div class="row">
         <div class="col-2">Message</div>
         <div class="col-4"><input type="text" id="messageInput" /></div>
     </div>
